--- a/yt_rank/templates/navbar.html
+++ b/yt_rank/templates/navbar.html
@@ -23,13 +23,13 @@
                     <a class="nav-link" href="{% url 'rank:order_history' user.username %}">주문내역</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'rank:point' %}">포인트충전</a>
+                    <a class="nav-link" href="{% url 'payments:point' %}">포인트충전</a>
                 </li>
 
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="navbar-brand" href="{% url 'rank:point' %}">포인트: {{ user.point }}</a>
+                    <a class="navbar-brand" href="{% url 'payments:point' %}">포인트: {{ user.point }}</a>
                 </li>
                 <li class="nav-item">
                     <button class="btn btn-primary" onclick="location.href='{% url 'common:logout' %}'">로그아웃</button>
