--- a/yt_rank/templates/navbar.html
+++ b/yt_rank/templates/navbar.html
@@ -26,6 +26,12 @@
                     <a class="nav-link" href="{% url 'payments:point' %}">포인트충전</a>
                 </li>
 
+                {% if user.is_superuser %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'admin' %}">관리자 페이지</a>
+                </li>
+                {% endif %}
+
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
