--- a/yt_rank/templates/navbar.html
+++ b/yt_rank/templates/navbar.html
@@ -30,6 +30,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% admin %}">관리자 페이지</a>
                 </li>
+                {% else %}
                 {% endif %}
 
             </ul>
