--- a/yt_rank/templates/navbar.html
+++ b/yt_rank/templates/navbar.html
@@ -28,7 +28,7 @@
 
                 {% if user.is_superuser %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% admin %}">관리자 페이지</a>
+                    <a class="nav-link" href="{% url 'admin:index' %}">관리자 페이지</a>
                 </li>
                 {% else %}
                 {% endif %}
